--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Simple Messenger Bot",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "",
     "dev": "nodemon index.js"
   },
@@ -22,6 +23,7 @@
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "mongoose": "^5.12.3",
+    "redis": "^3.1.0",
     "sequelize": "^6.6.2"
   }
 }
