--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "redis": "^3.1.0",
-    "sequelize": "^6.6.2",
-    "supertest": "^6.1.3"
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
+    "supertest": "^6.1.3",
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "redoc-cli": "^0.11.4",
