Final Revision : * [Fix] Update the tests + [Add] Update the tests * [Fix] Update the README.md * [Fix] Fix Sequelize models * [Fix] Update Configs * [Fix] Fix Code Style * [Fix] Fix Code Style

--- a/.env.example
+++ b/.env.example
@@ -10,47 +10,49 @@ MESSENGER_BOT_ACCESS_TOKEN=
 ## Weather
 WEATHER_SERVICE_API_KEY=57b1fa5fa18a4939a1a215628211204
 
+# Router
+ROUTER_PORT=3000
 
 # Persistant Database Selection (POSTGRESQL,MONGODB) [Default:MONGODB]
-DATABASE=MONGODB
+DATABASE=POSTGRESQL
 
 ## Postgresql Normal
-POSTGRESQL_DATABASE_NAME=
+POSTGRESQL_DATABASE_NAME=mohammadhb
 POSTGRESQL_DATABASE_HOST=localhost
 POSTGRESQL_DATABASE_PORT=
-POSTGRESQL_DATABASE_USER=
+POSTGRESQL_DATABASE_USER=mohammadhb
 POSTGRESQL_DATABASE_PASS=
 
 ## Postgresql Test
-POSTGRESQL_TEST_DATABASE_NAME=
+POSTGRESQL_TEST_DATABASE_NAME=messenger_bot
 POSTGRESQL_TEST_DATABASE_HOST=localhost
 POSTGRESQL_TEST_DATABASE_PORT=
 POSTGRESQL_TEST_DATABASE_USER=
 POSTGRESQL_TEST_DATABASE_PASS=
 
 ## MongoDB Normal
-MONGODB_DATABASE_NAME=
+MONGODB_DATABASE_NAME=messenger_bot
 MONGODB_DATABASE_HOST=localhost
 MONGODB_DATABASE_PORT=27017
 MONGODB_DATABASE_USER=
 MONGODB_DATABASE_PASS=
 
 ## MongoDB Test
-MONGODB_TEST_DATABASE_NAME=
+MONGODB_TEST_DATABASE_NAME=messenger_bot
 MONGODB_TEST_DATABASE_HOST=localhost
 MONGODB_TEST_DATABASE_PORT=27017
 MONGODB_TEST_DATABASE_USER=
 MONGODB_TEST_DATABASE_PASS=
 
 ## Redis
-REDIS_TEST_DATABASE_NAME=
+REDIS_TEST_DATABASE_NAME=messenger_bot
 REDIS_TEST_DATABASE_HOST=localhost
 REDIS_TEST_DATABASE_PORT=6379
 REDIS_TEST_DATABASE_USER=
 REDIS_TEST_DATABASE_PASS=
 
 ## Redis Test
-REDIS_DATABASE_NAME=
+REDIS_DATABASE_NAME=messenger_bot
 REDIS_DATABASE_HOST=localhost
 REDIS_DATABASE_PORT=6379
 REDIS_DATABASE_USER=
