--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "supertest": "^6.1.3",
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
+    "prettier": "2.2.1",
     "redoc-cli": "^0.11.4",
+    "supertest": "^6.1.3",
     "swagger-jsdoc": "^6.1.0"
   }
 }
